# newsapi-rs

./: .commitlintrc.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  .template.env  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.devcontainer/dotfiles/: .zprofile  .zshrc
.devcontainer/dotfiles/.config/starship/: starship.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot-automerge.yml  main.yml  pr-checks.yml  publish.yml
examples/: async_everything_search.rs  async_sources.rs  everything_search.rs  top_headlines.rs
src/: client.rs  constant.rs  error.rs  lib.rs  main.rs  model.rs  retry.rs  util.rs
