[package]
name = "newsapi-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the NewsAPI service"
license = "MIT"

[lib]
name = "newsapi_rs"
path = "src/lib.rs"

[[example]]
name = "top_headlines"
path = "examples/top_headlines.rs"

[[example]]
name = "everything_search"
path = "examples/everything_search.rs"

[[example]]
name = "async_everything_search"
path = "examples/async_everything_search.rs"

[[example]]
name = "async_source"
path = "examples/async_sources.rs"

[features]
default = []
blocking = ["reqwest/blocking"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
getset = "0.1.3"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.135"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.45.1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.7.0"
serial_test = "3.2.0"
