[package]
name = "newsapi-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the NewsAPI service"
license = "MIT"

[lib]
name = "newsapi_rs"
path = "src/lib.rs"

[[example]]
name = "top_headlines"
path = "examples/top_headlines.rs"

[[example]]
name = "everything_search"
path = "examples/everything_search.rs"

[[example]]
name = "async_everything_search"
path = "examples/async_everything_search.rs"

[[example]]
name = "async_source"
path = "examples/async_sources.rs"

[features]
default = []
blocking = ["reqwest/blocking"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
getset = "0.1.6"
log = "0.4.22"
regex = "1.12.2"
reqwest = { version = "0.13.0", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.145"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.7.1"
serial_test = "3.2.0"
